Scaffold discord.js

--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "maple-code-discord",
   "version": "0.0.0",
-  "scripts": {},
+  "scripts": {
+    "dev": "tsx index.ts"
+  },
   "devDependencies": {
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "discord.js": "^14.25.1"
+    "discord.js": "^14.25.1",
+    "dotenv": "^17.2.3"
   }
 }
