--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "tsx index.ts",
-    "deploy-commands": "tsx deploy-commands.ts"
+    "dev": "tsx src/index.ts"
   },
   "devDependencies": {
     "tsx": "^4.21.0",
@@ -12,6 +11,7 @@
   },
   "dependencies": {
     "discord.js": "^14.25.1",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "zod": "^4.1.13"
   }
 }
